--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
-    "sass": "^1.77.8",
+    "sass": "^1.77.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
