--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BASE_API_URL = http://localhost:8080
+BASE_API_URL = https://9691-111-248-113-219.ngrok-free.app 
+# BASE_API_URL = http://104.199.211.35:8080
 GENERATE_SOURCEMAP=false
